various implementations for task tracking implented more extensive sticky task moved some initialization to main file added tasks initialization needed for hb added support to undo to task fixed overflowing task when too long made sticky task a list that scrolls current task in position

--- a/less/simulation.less
+++ b/less/simulation.less
@@ -1,3 +1,7 @@
+#wrapper {
+    overflow: visible !important;
+}
+
 .error-note-simulation {
     background: #ff1e1e;
     padding: 5px;
@@ -22,23 +26,38 @@
 .simulation-component {
 
     *:focus {
-        outline: none!important;
+        outline: none !important;
     }
 
     *:focus-visible {
-        outline-width: var(--simulation-outline-width)!important;
-        outline-color: #CD1C6A!important;
-        outline-style: solid!important;
+        outline-width: var(--simulation-outline-width) !important;
+        outline-color: #CD1C6A !important;
+        outline-style: solid !important;
     }
 
     .full-screen-style {
         background: inherit;
 
 
+        .simulation-task-list {
+            margin-bottom: 0;
+
+            &.current {
+                top: 0;
+                margin-top: 0;
+                margin-bottom: 0;
+            }
+
+            &.after {
+                display: none;
+            }
+        }
+
         .simulation-widget {
             overflow-y: scroll;
             overflow-x: hidden;
-            height: calc(100% - 54px);
+            height: calc(100% - 98px);
+            margin-top: 0;
 
             .simulation-graphic {
                 img {
@@ -52,6 +71,7 @@
                 left: 0;
                 width: calc(100% - 30px);
                 border-radius: 0;
+                margin-top: 0;
             }
         }
 
@@ -60,16 +80,22 @@
     .simulation-widget {
         max-width: 100%;
         display: inline-block;
+        margin-top: 30px;
 
         .simulation-toolbar {
-            background: @esdc-interactive-blue;
+            background: #1c4e8a;
             border-radius: 0 0 10px 10px;
             padding: 15px;
+            position: relative;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             height: 24px;
+            z-index: 4;
+            position: sticky;
+            bottom: 0;
+            margin-top: calc(100vh - 160px);
 
             button {
                 background: transparent;
@@ -96,38 +122,90 @@
     }
 
     .simulation-task-list {
-            background-color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            width: calc(100% - 18px);
-            position: relative;
+        background-color: #ffffff;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        background-color: transparent;
+        margin-top: 30px;
+
+        &.current {
+            position: static;
+            top: 60px;
+            background-color: transparent;
+            margin-top: -63px;
+            height: 42px;
+            overflow: hidden;
+            z-index: 2;
             margin-bottom: 15px;
 
-          .checkbox-group {
+            .checkbox-group {
+                background-color: #1c4e8a;
+                border: 1px solid #1c4e8a;
+                margin-bottom: 0;
+            }
+
+            label {
+                color: #ffffff;
+
+            }
+        }
+
+        &.sticky {
+            position: sticky;
+        }
+
+        &.after {
+            margin-bottom: 14px;
+            z-index: 3;
+        }
+
+        .checkbox-group {
             border: 1px solid #e5e5e5;
             padding: 10px;
             display: flex;
             align-items: center;
             gap: 20px;
+            margin-bottom: 5px;
+            background-color: #ffffff;
+
             label {
                 cursor: default !important;
+                span {
+                    overflow: hidden;
+                    max-height: 23px;
+                    display: block;
+                    text-overflow: ellipsis;
+                    max-width: 455px;
+                    white-space: nowrap;
+                }
             }
-          }
 
-          .checkbox-group.checked {
-            background-color: #1c4e8a;
-          }
+            &.current-task {
+                background: #1c4e8a;
+                border: 1px solid #1c4e8a;
 
-          input[type=checkbox] {
+                label {
+                    color: #ffffff;
+                }
+            }
+        }
+
+        .checkbox-group.checked {
+            background-color: #0f2a4a;
+            border: 1px solid #0f2a4a;
+        }
+
+        input[type=checkbox] {
             visibility: hidden;
-          }
+        }
 
-          input[type=checkbox] ~ label {
+        input[type=checkbox]~label {
             position: relative;
-          }
+        }
 
-          input[type=checkbox] ~ label:before {
+        input[type=checkbox]~label:before {
             content: "";
             position: absolute;
             border: 1px solid #e5e5e5;
@@ -141,25 +219,33 @@
             justify-content: center;
             align-items: center;
             background-color: #ffffff;
-          }
+        }
 
-          input[type=checkbox]:checked ~ label {
+        input[type=checkbox]:checked~label {
             color: #ffffff;
-          }
+        }
 
-          input[type=checkbox]:checked ~ label:before {
+        input[type=checkbox]:checked~label:before {
             content: "✔";
-            color: #1c4e8a;
-          }
+            color: #0f2a4adb;
+
+        }
     }
 
     .simulation-graphic {
         position: relative;
         max-width: 100%;
-        display: inline-flex;
+        display: flex;
         align-items: center;
         justify-content: center;
         vertical-align: bottom;
+        min-height: 100%;
+        align-items: center;
+        justify-content: center;
+
+        &.sticky-margin {
+            margin-bottom: calc(-100vh + 160px);
+        }
 
         .action-container {
             position: absolute;
@@ -518,13 +604,13 @@
 }
 
 @media (max-width: 700px) {
-  .simulation-wrapper {
-    display: none !important;
-  }
+    .simulation-wrapper {
+        display: none !important;
+    }
 }
 
 @media (min-width: 701px) {
-  .simulation-mobile-fallback-message-container {
-    display: none !important;
-  }
+    .simulation-mobile-fallback-message-container {
+        display: none !important;
+    }
 }
